--- a/CalendarRacingBot 0.6.csproj
+++ b/CalendarRacingBot 0.6.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <Content Include="bin\Debug\net8.0\config.json" />
     <Content Include="bin\Debug\net8.0\credentials.json" />
+    <Content Include="configTemplate.json" />
   </ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="Discord.Net" Version="3.17.2" />
